# dash

./: .gitignore  Cargo.toml  README.md
app/: README.md  pubspec.yaml
app/lib/: gateway_client.dart  main.dart
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/macos/Runner/Configs/: AppInfo.xcconfig
app/test/: widget_test.dart
crates/bus/: Cargo.toml
crates/bus/benches/: latency.rs
crates/bus/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  event.rs  ids.rs  lib.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: lib.rs  main.rs  protocol.rs
crates/gateway/tests/: bridge.rs  echo.rs
crates/media/: Cargo.toml
crates/media/src/: api.rs  error.rs  lib.rs  runner.rs  service.rs  types.rs
crates/nav/: Cargo.toml
crates/nav/src/: api.rs  error.rs  lib.rs  runner.rs  service.rs  types.rs
crates/settings/: Cargo.toml
crates/settings/src/: api.rs  error.rs  lib.rs  runner.rs  service.rs  types.rs
crates/voice/: Cargo.toml
crates/voice/src/: api.rs  error.rs  intent.rs  lib.rs  runner.rs  service.rs
