[package]
name = "dash-core"
description = "Shared types for the dash infotainment system: events, ids, and common error scaffolding."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
