[package]
name = "dash-nav"
description = "Navigation service: versioned NavApi trait, destination state, and bus integration."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
dash-core = { path = "../core" }
dash-bus = { path = "../bus" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
