[package]
name = "dash-voice"
description = "Voice service: parses natural-language transcripts into structured commands."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
dash-core = { path = "../core" }
dash-bus = { path = "../bus" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
